--- a/src/components/card/CaseStudyShell.module.css
+++ b/src/components/card/CaseStudyShell.module.css
@@ -7,4 +7,5 @@
 .contentArea {
   position: absolute;
   inset: 0;
+  z-index: 0;
 }
