--- a/src/components/card/NumberedTabs.module.css
+++ b/src/components/card/NumberedTabs.module.css
@@ -3,6 +3,7 @@
   left: 33px;
   top: 29px;
   width: 55px;
+  z-index: 2;
   display: flex;
   flex-direction: column;
   gap: 8px;
