--- a/src/components/card/ViewProjectButton.module.css
+++ b/src/components/card/ViewProjectButton.module.css
@@ -2,6 +2,7 @@
   position: absolute;
   left: 835.5px;
   top: 482px;
+  z-index: 2;
   display: flex;
   align-items: center;
   justify-content: center;
