--- a/src/components/hero/HeroPolaroid.module.css
+++ b/src/components/hero/HeroPolaroid.module.css
@@ -1,21 +1,13 @@
 .wrapper {
   position: absolute;
-  left: 712px;
-  top: 195px;
-  width: 88px;
+  left: 589.74px;
+  top: 5px;
+  width: 296px;
   pointer-events: none;
-}
-
-.polaroid {
-  background: var(--text-cream);
-  border-style: solid;
-  border-width: 10px 10px 20px 10px;
-  box-shadow: 1px 2px 2px 0px rgba(164, 207, 74, 0.5);
 }
 
 .photo {
   display: block;
   width: 100%;
-  aspect-ratio: 3 /4;
-  object-fit: cover;
+  height: auto;
 }
